--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,18 @@
-
+*{
+	padding: 0px;
+	margin: 0px:
+}
+.holder{
+	background-color: beige;
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.item-1{
+	background-color: red;
+	height: 100px;
+	width: 100px;
+}
 /* Your CSS Code here. */
